<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/loginTitle"
            android:text="@string/login"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_width="wrap_content"
            android:textAllCaps="true"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:background="@android:color/transparent"/>

        <EditText
            android:id="@+id/login"
            android:layout_marginLeft="@dimen/common_spacing"
            android:layout_marginRight="@dimen/common_spacing"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_field_height"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:hint="@string/enter_login_here"
            android:autofillHints="login hint"
            android:inputType="text"/>

        <TextView
            android:id="@+id/passwordTitle"
            android:text="@string/password"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_width="wrap_content"
            android:textAllCaps="true"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:hint="@string/password_hint"
            android:background="@android:color/transparent"/>

        <EditText
            android:id="@+id/password"
            android:layout_marginLeft="@dimen/common_spacing"
            android:layout_marginRight="@dimen/common_spacing"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_field_height"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:hint="@string/enter_password_here"
            android:autofillHints="password hint"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/enter"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>