<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        tools:layout_editor_absoluteY="16dp">
        <TextView
            android:id="@+id/authDialogText"
            android:text="@string/auth_dialog_question"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:textAllCaps="true"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_spacing"
            android:background="@android:color/transparent"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                tools:layout_editor_absoluteY="16dp">
                <Button
                    android:id="@+id/authDialogYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/common_spacing"
                    android:text="@string/yes"
                    />

                <Button
                    android:id="@+id/authDialogNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    />
            </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>